# pari

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  TODO_design.md  build.rs  deny.toml
.claude/: settings.json
.claude/hooks/: pre-stage-fmt.sh
.github/workflows/: ci.yml
context/: backlog.md  handoff.md  pending-tasks.md  refactor-singletons-to-composition.md
context/tasks/: task-01-tracked-field.md  task-02-entity-identity.md  (+11 more)
docs/: conventions.md  vision.md  who-is-pari-for.md
pari-macros/: CLAUDE.md  Cargo.toml
schemas/: artifact.json  artifact_kind.json  embedded_workflow.json  hook.json  hook_input.json  hook_invocation.json  hooks_map.json  hooks_map_value.json  raci.json  relay.json  relay_state_semantic.json  reusable_workflow.json  review_step.json  role.json  shared_workflow.json  state_map_entry.json  step.json  task.json  task_semantic.json  task_state_entry.json  team.json  team_member.json  work_step.json  work_step_definition.json  workflow.json  workflow_semantic.json  workflow_state_entry.json
src/: entity.rs  lib.rs  store.rs  store_error.rs  tracked.rs  types.rs
src/entity/: mod.rs  (+8 more)
tests/: CLAUDE.md  core_jobs.rs  cross_entity_validation.rs  derive_entity.rs  entity_definitions.rs  error_compose.rs  error_hierarchy.rs  primitive_error.rs  primitive_identity_validation.rs  primitive_substrate.rs  primitive_transport_aggregation.rs  repo_substrate.rs  schema_coherence.rs  storage_integration.rs  store_operations.rs  substrate_pipeline.rs  tests.rs  tracked_serde.rs  validate_entities.rs
xtask/: Cargo.toml
(+515 files in other folders)
