[workspace]
members = [".", "xtask", "pari-macros"]

[package]
name = "pari"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "pari"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
schemars = "0.8"
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
indexmap = "2"
pari-macros = { path = "pari-macros" }

[dev-dependencies]
jsonschema = "0.45"
