[workspace]
members = [".", "xtask", "pari-macros"]

[package]
name = "pari"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "pari"
path = "src/lib.rs"

[features]
skip-schema-build = []

[dependencies]
serde = { version = "1", features = ["derive"] }
schemars = { version = "0.8", features = ["indexmap2"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-error = "0.2"
opentelemetry-semantic-conventions = "0.29"
indexmap = { version = "2", features = ["serde"] }
pari-macros = { path = "pari-macros" }
futures = "0.3"
jsonschema = "0.45"

[dev-dependencies]
tempfile = "3"
rstest = "0.23"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
